tests/errors/invoke-trig-too-often.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint 3 >= 5
  ┌─ tests/errors/invoke-trig-too-often.fil:9:3
  │
3 │     @interface[G, G+5] go_G: 1,
  │     -------------------------- Interface requires event to trigger once in 5 cycles
  ·
7 │ component Main<T>(@interface[T, T+3] go_T: 1) -> () {
  │                   -------------------------- Provided event may trigger every 3 cycles
8 │   M := new Mult;
9 │   m0 := invoke M<T+1>;
  │   ^^^^^^^^^^^^^^^^^^^^ Event provided to invoke pulses more often than @interface allows

